--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: ruby
 rvm:
   - "2.0.0"
+before_script:
+  - cp config/lti_public_resources_config.yml.example test/dummy/config/lti_public_resources_config.yml
