--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ log/*.log
 pkg/
 spec/test_app/db/*.sqlite3
 spec/test_app/db/*.sqlite3-journal
-spec/test_ap/log/*.log
+spec/test_app/log/*.log
 spec/test_app/tmp/
 spec/test_app/.sass-cache
 spec/test_app/config/lti_public_resources_config.yml
