--- a/spec/test_app/config/lti_public_resources_config.yml
+++ b/spec/test_app/config/lti_public_resources_config.yml
@@ -1,7 +1,7 @@
 vimeo:
-  consumer_key: VIMEO_CONSUMER_KEY
-  consumer_secret: VIMEO_CONSUMER_SECRET
-  access_token: VIMEO_ACCESS_TOKEN
-  access_token_secret: VIMEO_ACCESS_TOKEN_SECRET
+  consumer_key: 94a35092485388628457c32b5459f4898bb37db4
+  consumer_secret: 993565f5df803b5bca88e299ee6a1f7f87a102a0
+  access_token: 39036e9ecd5c7b43691559f48dbf918c
+  access_token_secret: 147a547eb83f96a5cb95f88d4588e8c038e695b5
 quizlet:
-  client_id: QUIZLET_CLIENT_ID
+  client_id: rTHYaHnXTz
